# embassy-pin-speed-test

./: Cargo.toml
src/: main.rs
